# RAG-Local

./: .env.example  .env.production.example  .env.test.example  .gitattributes  .gitignore  README.md  _agent_run.sh  docker-compose.fail2ban.yml  docker-compose.waf.yml  docker-compose.yml
.github/: pull_request_template.md
backend/: .env.example  .env.production.example  .env.test.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: f7a2c9e01b34_initial_core_schema.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  auth.py  chats.py  documents.py  health.py  kbs.py  search.py
backend/app/core/: __init__.py  access_log_middleware.py  config.py  correlation_middleware.py  error_handlers.py  log_context.py  logging_config.py  middleware.py  prometheus_middleware.py  rate_limit_middleware.py  request_context.py  security_access_log.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  audit.py  chat.py  document.py  knowledge_base.py  user.py
backend/app/observability/: __init__.py  metrics.py
backend/app/realtime/: __init__.py  auth.py  chat_namespace.py  emitters.py  server.py
backend/app/services/: __init__.py  auth_audit.py  auth_service.py  chat_paths.py  chat_service.py  document_service.py  health_check.py  jwt_tokens.py  kb_service.py  login_rate_limit.py  passwords.py  rate_limit.py  rate_limit_audit.py  rate_limit_http.py  upload_media.py
backend/app/services/antivirus/: __init__.py  clamav.py  errors.py  quarantine.py  scan.py
backend/app/services/chat/: __init__.py  citations_serializer.py  generation.py  intent.py  prompt_guards.py  prompting.py  streaming.py
backend/app/services/chunking/: __init__.py  engine.py  tokenizer.py
backend/app/services/embeddings/: __init__.py  errors.py  fake.py  sentence_transformer.py  service.py
backend/app/services/ollama/: __init__.py  client.py  errors.py  fake.py
backend/app/services/parsing/: __init__.py  artifacts.py  docx.py  errors.py  normalize.py  ocr.py  orchestrator.py  pdf.py  pipeline_context.py  txt.py  types.py  unstructured_fallback.py
backend/app/services/qdrant/: __init__.py  client.py  collection.py  errors.py  payload.py  search.py  store.py
backend/app/services/retrieval/: __init__.py  bm25_index.py  fallback.py  filters.py  fusion.py  hybrid.py  rerank.py  types.py
backend/app/tasks/: __init__.py  celery_app.py  embed.py  ingest.py  ocr.py
backend/scripts/: __init__.py  ensure-test-infra.sh  seed_dev_user.py  sync-env-security.sh  test-fail2ban.sh  test-prompt-guards.sh  test-rate-limits.sh
backend/tests/: conftest.py  postgres_url.py  test_auth_crypto.py  test_auth_integration.py  test_auth_redis.py  test_chat_generation_integration.py  test_chat_integration.py  test_chat_intent.py  test_chat_paths.py  test_chat_prompting_unit.py  test_chunking.py  test_clamav_integration.py  test_clamav_unit.py  test_doc_parsers.py  test_documents_integration.py  test_embeddings.py  test_fail2ban_filters.py  test_health_api.py  test_ingestion_worker.py  test_kb_integration.py  test_logging_correlation.py  test_migrations.py  test_models_import.py  test_ocr.py  test_package_layout.py  test_prometheus_metrics.py  test_prompt_guards_integration.py  test_prompt_guards_unit.py  test_qdrant_integration.py  test_rate_limit_integration.py  test_rate_limit_unit.py  test_rerank_unit.py  test_retrieval_fallback.py  test_retrieval_integration.py  test_retrieval_unit.py  test_settings.py  test_socketio_auth.py  test_socketio_streaming.py  test_waf_integration.py
docker/: CONVENTIONS.md
docs/: 01-deployment.md  02-smoke-test.md  03-github-workflow.md  04-env-example.md  05-architecture.md  06-technologies.md  07-features-roadmap.md  08-todo.md  09-api-spec.md  10-database-schema.md  11-rag-flow.md  12-security.md  13-troubleshooting.md  14-comercializacion-mvp-precios.md  15-asistente-respuestas.md  16-github-issues.md  17-fail2ban.md  18-prompt-guards.md  README.md  api-spec.md  architecture.md  comercializacion-mvp-precios.docx  comercializacion-mvp-precios.md  database-schema.md  deployment.md  env-example.md  features-roadmap.md  (+7 more)
(+94 files in other folders)
