[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-local-backend"
version = "0.1.0"
description = "Backend API y workers (FastAPI) — dev tooling en chore/dev-tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14",
  "fastapi>=0.115",
  "httpx>=0.27",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "redis>=5.2",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "black>=24.10",
  "isort>=5.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "(\\.venv|venv|build|dist)/"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
